--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: antiquewhite;
@@ -60,7 +60,6 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
